# cheminee-similarity-model

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: encoder_only_weights.index
assets/vae_encoder/: saved_model.pb
assets/vae_encoder/variables/: variables.index
benches/: encoding_benches.rs
src/: encoder.rs  main.rs
tests/: encoder_tests.rs
