[package]
name = "cheminee-similarity-model"
version = "0.1.5"
edition = "2021"
description = "Builds a Morgan fingerprint encoder model to accelerate similarity searches"
license = "MIT"
documentation = "https://github.com/rdkit-rs/cheminee-similarity-model"
repository = "https://github.com/rdkit-rs/cheminee-similarity-model"

[dependencies]
eyre = "0"
lazy_static = "1.5"
ndarray = "0.16"
tempfile = "3.13"
tensorflow = "0.21"
log = "0.4.22"

[build-dependencies]
flate2 = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
